# nora

./: .gitignore  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  runtime.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
corpus/: pipeline.json
corpus/manifests/: chew-2024.json  chew-illustrated-2024.json  cho-2024.json  cho-illustrated-2024.json  jchew-2024.json  jchew-illustrated-2024.json
corpus/reviews/doses/: README.md
crates/chew-benchmark/: Cargo.toml
crates/chew-benchmark/src/: lib.rs
crates/chew-corpus/: Cargo.toml
crates/chew-corpus/src/: bbox.rs  comparison.rs  config.rs  dose.rs  error.rs  heading.rs  lib.rs  main.rs  manifest.rs  page.rs  pipeline.rs  report.rs  review.rs  toolchain.rs
crates/chew-corpus/tests/: cli.rs  clinical_review.rs  config_manifest.rs  dose_inventory.rs  edition_comparison.rs  heading_validation.rs  integrity_toolchain.rs  page_extraction.rs  report_pipeline.rs
crates/chew-domain/: Cargo.toml
crates/chew-domain/src/: lib.rs
crates/chew-inference/: Cargo.toml
crates/chew-inference/src/: lib.rs
docs/superpowers/plans/: 2026-07-14-corpus-extraction-validation.md
docs/superpowers/specs/: 2026-07-14-corpus-extraction-validation-design.md
tests/fixtures/corpus/: fake-pdfinfo.sh  fake-pdftotext.sh
