[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/chew-domain",
  "crates/chew-corpus",
  "crates/chew-inference",
  "crates/chew-benchmark",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
