[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/chew-domain",
  "crates/chew-corpus",
  "crates/chew-inference",
  "crates/chew-benchmark",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
quick-xml = "0.41"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
unicode-normalization = "0.1"
