[package]
name = "chew-corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "chew-corpus-pipeline"
path = "src/main.rs"

[dependencies]
clap.workspace = true
hex.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
