[package]
name = "chew-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "chew_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chew-domain = { path = "../../../crates/chew-domain" }
serde.workspace = true
tauri = { version = "2", features = [] }
